--- a/DemoWeb2/bin/DemoWeb2.dll.config
+++ b/DemoWeb2/bin/DemoWeb2.dll.config
@@ -13,11 +13,18 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="FacebookAppId" value="758104562691593" />
+    <add key="FacebookAppSecret" value="b49ef2fa97b7489dd2953b903e34813a" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
+  <system.webServer>
+    <modules>
+      <add name="FormsAuthenticationModule" type="System.Web.Security.FormsAuthenticationModule" />
+    </modules>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
