Chức năng Call trực tiếp

--- a/DemoWeb2/DemoWeb2.csproj
+++ b/DemoWeb2/DemoWeb2.csproj
@@ -2170,6 +2170,7 @@
     <Content Include="Content\plugin\ckeditor\lang\en-gb.js" />
     <Content Include="Content\plugin\ckeditor\lang\en.js" />
     <Content Include="Content\plugin\ckeditor\lang\eo.js" />
+    <Content Include="Content\plugin\ckeditor\lang\es-mx.js" />
     <Content Include="Content\plugin\ckeditor\lang\es.js" />
     <Content Include="Content\plugin\ckeditor\lang\et.js" />
     <Content Include="Content\plugin\ckeditor\lang\eu.js" />
@@ -2233,9 +2234,11 @@
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\de-ch.js" />
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\de.js" />
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\el.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\en-au.js" />
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\en-gb.js" />
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\en.js" />
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\eo.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\es-mx.js" />
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\es.js" />
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\et.js" />
     <Content Include="Content\plugin\ckeditor\plugins\a11yhelp\dialogs\lang\eu.js" />
@@ -2295,10 +2298,31 @@
     <Content Include="Content\plugin\ckeditor\plugins\copyformatting\cursors\cursor.svg" />
     <Content Include="Content\plugin\ckeditor\plugins\copyformatting\styles\copyformatting.css" />
     <Content Include="Content\plugin\ckeditor\plugins\dialog\dialogDefinition.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\dialog\styles\dialog.css" />
     <Content Include="Content\plugin\ckeditor\plugins\div\dialogs\div.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\plugindefinition.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\authentication.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\exportpdf.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\configfilename.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\emptyeditor.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\integration.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\integrations\easyimage.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\notifications.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\notificationsasync.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\paperformat.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\readonly.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\stylesheets.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\tokenfetching.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\tokentwoeditorscorrect.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\tokentwoeditorswrong.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\tokenwithouturl.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\wrongendpoint.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\notification.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\resourcespaths.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\statistics.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\stylesheets.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\_helpers\tools.js" />
     <Content Include="Content\plugin\ckeditor\plugins\find\dialogs\find.js" />
-    <Content Include="Content\plugin\ckeditor\plugins\flash\dialogs\flash.js" />
-    <Content Include="Content\plugin\ckeditor\plugins\flash\images\placeholder.png" />
     <Content Include="Content\plugin\ckeditor\plugins\forms\dialogs\button.js" />
     <Content Include="Content\plugin\ckeditor\plugins\forms\dialogs\checkbox.js" />
     <Content Include="Content\plugin\ckeditor\plugins\forms\dialogs\form.js" />
@@ -2324,8 +2348,15 @@
     <Content Include="Content\plugin\ckeditor\plugins\magicline\images\icon-rtl.png" />
     <Content Include="Content\plugin\ckeditor\plugins\magicline\images\icon.png" />
     <Content Include="Content\plugin\ckeditor\plugins\pagebreak\images\pagebreak.gif" />
+    <Content Include="Content\plugin\ckeditor\plugins\pastefromgdocs\filter\default.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\pastefromlibreoffice\filter\default.js" />
     <Content Include="Content\plugin\ckeditor\plugins\pastefromword\filter\default.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\pastetools\filter\common.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\pastetools\filter\image.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\preview\images\pagebreak.gif" />
     <Content Include="Content\plugin\ckeditor\plugins\preview\preview.html" />
+    <Content Include="Content\plugin\ckeditor\plugins\preview\styles\screen.css" />
+    <Content Include="Content\plugin\ckeditor\plugins\scayt\dialogs\dialog.css" />
     <Content Include="Content\plugin\ckeditor\plugins\scayt\dialogs\options.js" />
     <Content Include="Content\plugin\ckeditor\plugins\scayt\dialogs\toolbar.css" />
     <Content Include="Content\plugin\ckeditor\plugins\scayt\skins\moono-lisa\scayt.css" />
@@ -2396,9 +2427,12 @@
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\de-ch.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\de.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\el.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\en-au.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\en-ca.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\en-gb.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\en.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\eo.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\es-mx.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\es.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\et.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\eu.js" />
@@ -2425,11 +2459,14 @@
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\pl.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\pt-br.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\pt.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\ro.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\ru.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\si.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\sk.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\sl.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\sq.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\sr-latn.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\sr.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\sv.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\th.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\tr.js" />
@@ -2441,30 +2478,23 @@
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\zh.js" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\lang\_translationstatus.txt" />
     <Content Include="Content\plugin\ckeditor\plugins\specialchar\dialogs\specialchar.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\tableselection\styles\tableselection.css" />
     <Content Include="Content\plugin\ckeditor\plugins\tabletools\dialogs\tableCell.js" />
     <Content Include="Content\plugin\ckeditor\plugins\table\dialogs\table.js" />
     <Content Include="Content\plugin\ckeditor\plugins\templates\dialogs\templates.css" />
     <Content Include="Content\plugin\ckeditor\plugins\templates\dialogs\templates.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\templates\templatedefinition.js" />
     <Content Include="Content\plugin\ckeditor\plugins\templates\templates\default.js" />
     <Content Include="Content\plugin\ckeditor\plugins\templates\templates\images\template1.gif" />
     <Content Include="Content\plugin\ckeditor\plugins\templates\templates\images\template2.gif" />
     <Content Include="Content\plugin\ckeditor\plugins\templates\templates\images\template3.gif" />
-    <Content Include="Content\plugin\ckeditor\plugins\wsc\dialogs\ciframe.html" />
-    <Content Include="Content\plugin\ckeditor\plugins\wsc\dialogs\tmpFrameset.html" />
-    <Content Include="Content\plugin\ckeditor\plugins\wsc\dialogs\wsc.css" />
-    <Content Include="Content\plugin\ckeditor\plugins\wsc\dialogs\wsc.js" />
-    <Content Include="Content\plugin\ckeditor\plugins\wsc\dialogs\wsc_ie.js" />
-    <Content Include="Content\plugin\ckeditor\plugins\wsc\skins\moono-lisa\wsc.css" />
-    <Content Include="Content\plugin\ckeditor\plugins\youtube\images\icon.png" />
-    <Content Include="Content\plugin\ckeditor\plugins\youtube\lang\en.js" />
-    <Content Include="Content\plugin\ckeditor\plugins\youtube\lang\ja.js" />
-    <Content Include="Content\plugin\ckeditor\plugins\youtube\lang\pt.js" />
-    <Content Include="Content\plugin\ckeditor\plugins\youtube\plugin.js" />
+    <Content Include="Content\plugin\ckeditor\plugins\widget\images\handle.png" />
     <Content Include="Content\plugin\ckeditor\samples\css\samples.css" />
     <Content Include="Content\plugin\ckeditor\samples\img\github-top.png" />
     <Content Include="Content\plugin\ckeditor\samples\img\header-bg.png" />
     <Content Include="Content\plugin\ckeditor\samples\img\header-separator.png" />
     <Content Include="Content\plugin\ckeditor\samples\img\logo.png" />
+    <Content Include="Content\plugin\ckeditor\samples\img\logo.svg" />
     <Content Include="Content\plugin\ckeditor\samples\img\navigation-tip.png" />
     <Content Include="Content\plugin\ckeditor\samples\index.html" />
     <Content Include="Content\plugin\ckeditor\samples\js\sample.js" />
@@ -2482,9 +2512,6 @@
     <Content Include="Content\plugin\ckeditor\samples\old\dialog\dialog.html" />
     <Content Include="Content\plugin\ckeditor\samples\old\divreplace.html" />
     <Content Include="Content\plugin\ckeditor\samples\old\enterkey\enterkey.html" />
-    <Content Include="Content\plugin\ckeditor\samples\old\htmlwriter\assets\outputforflash\outputforflash.swf" />
-    <Content Include="Content\plugin\ckeditor\samples\old\htmlwriter\assets\outputforflash\swfobject.js" />
-    <Content Include="Content\plugin\ckeditor\samples\old\htmlwriter\outputforflash.html" />
     <Content Include="Content\plugin\ckeditor\samples\old\htmlwriter\outputhtml.html" />
     <Content Include="Content\plugin\ckeditor\samples\old\index.html" />
     <Content Include="Content\plugin\ckeditor\samples\old\inlineall.html" />
@@ -2540,6 +2567,7 @@
     <Content Include="Content\plugin\ckeditor\skins\moono-lisa\images\refresh.png" />
     <Content Include="Content\plugin\ckeditor\skins\moono-lisa\images\spinner.gif" />
     <Content Include="Content\plugin\ckeditor\styles.js" />
+    <Content Include="Content\plugin\ckeditor\vendor\promise.js" />
     <Content Include="Content\plugin\ckfinder\bin\Debug\CKFinder.dll" />
     <Content Include="Content\plugin\ckfinder\bin\Debug\CKFinder.pdb" />
     <Content Include="Content\plugin\ckfinder\bin\Release\CKFinder.dll" />
@@ -3346,20 +3374,39 @@
     <Content Include="Content\scss\bootstrap\scss\_variables.scss" />
     <Content Include="Content\scss\style.scss" />
     <Content Include="Images\ao_thun2.webp" />
+    <Content Include="Content\plugin\ckfinder\plugins\fileeditor\codemirror\LICENSE" />
+    <Content Include="Content\plugin\ckfinder\userfiles\.htaccess" />
+    <Content Include="Content\plugin\ckeditor\bender-runner.config.json" />
+    <Content Include="Content\plugin\ckeditor\CHANGES.md" />
+    <Content Include="Content\plugin\ckeditor\LICENSE.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\CHANGELOG.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\LICENSE.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\README.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\configfilename.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\emptyeditor.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\integration.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\integrations\easyimage.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\notifications.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\notificationsasync.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\paperformat.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\readonly.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\stylesheets.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\tokenfetching.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\tokentwoeditorscorrect.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\tokentwoeditorswrong.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\tokenwithouturl.md" />
+    <Content Include="Content\plugin\ckeditor\plugins\exportpdf\tests\manual\wrongendpoint.md" />
     <Content Include="Content\plugin\ckeditor\plugins\scayt\CHANGELOG.md" />
     <Content Include="Content\plugin\ckeditor\plugins\scayt\LICENSE.md" />
     <Content Include="Content\plugin\ckeditor\plugins\scayt\README.md" />
-    <Content Include="Content\plugin\ckeditor\plugins\wsc\LICENSE.md" />
-    <Content Include="Content\plugin\ckeditor\plugins\wsc\README.md" />
-    <Content Include="Content\plugin\ckeditor\samples\old\htmlwriter\assets\outputforflash\outputforflash.fla" />
+    <Content Include="Content\plugin\ckeditor\README.md" />
     <Content Include="Content\plugin\ckeditor\samples\toolbarconfigurator\font\config.json" />
     <Content Include="Content\plugin\ckeditor\samples\toolbarconfigurator\font\fontello.eot" />
     <Content Include="Content\plugin\ckeditor\samples\toolbarconfigurator\font\fontello.ttf" />
     <Content Include="Content\plugin\ckeditor\samples\toolbarconfigurator\font\fontello.woff" />
     <Content Include="Content\plugin\ckeditor\samples\toolbarconfigurator\lib\codemirror\LICENSE" />
+    <Content Include="Content\plugin\ckeditor\SECURITY.md" />
     <Content Include="Content\plugin\ckeditor\skins\moono-lisa\readme.md" />
-    <Content Include="Content\plugin\ckfinder\plugins\fileeditor\codemirror\LICENSE" />
-    <Content Include="Content\plugin\ckfinder\userfiles\.htaccess" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
