--- a/DemoWeb2/bin/DemoWeb2.dll.config
+++ b/DemoWeb2/bin/DemoWeb2.dll.config
@@ -24,8 +24,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="FacebookAppId" value="758104562691593" />
-    <add key="FacebookAppSecret" value="b49ef2fa97b7489dd2953b903e34813a" />
+    
+    <!--Facebook Login-->
+    <add key="FacebookAppId" value="1756001991506584" />
+    <add key="FacebookAppSecret" value="26d3390d7daa0843ef285a07678c49c1" />
+    
+    <!--Google Login-->
     <add key="GoogleClientId" value="1098593658235-tt8iff6m9tg8l2cfdngofo6j3phtc5dn.apps.googleusercontent.com" />
     <add key="GoogleClientSecret" value="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" />
     <add key="owin:AppStartup" value="DemoWeb2.Startup, [AssemblyName]" />
@@ -39,17 +43,6 @@
     <modules>
       <add name="FormsAuthenticationModule" type="System.Web.Security.FormsAuthenticationModule" />
     </modules>
-    <!--<rewrite>
-      <rules>
-        <rule name="HTTP to HTTPS" stopProcessing="true">
-          <match url="(.*)" />
-          <conditions>
-            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
-          </conditions>
-          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
-        </rule>
-      </rules>
-    </rewrite>-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
