--- a/DemoWeb2/packages.config
+++ b/DemoWeb2/packages.config
@@ -4,7 +4,7 @@
   <package id="bootstrap" version="5.3.0-alpha2" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.20.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
-  <package id="Facebook" version="7.0.10-beta" targetFramework="net472" />
+  <package id="Facebook" version="7.0.6" targetFramework="net472" />
   <package id="Google.Apis" version="1.61.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.61.0" targetFramework="net472" />
   <package id="Google.Apis.Auth.Mvc" version="1.61.0" targetFramework="net472" />
@@ -51,6 +51,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Facebook" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Google" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
